force-app/main/default/objects/Auction_Data__c/Auction_Data__c.object-meta.xml
<CustomObject>
    <description>closedateが過去6ヶ月分（出品されたもの）
　　OR
Salesforceにアップ済みのもの
　　OR
cs_flgが1（先売り）でsa_car_infoの作成日が過去6ヶ月のもの</description>
    <label>オークション出品データ</label>
    <nameField>
        <label>管理番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>