force-app/main/default/objects/Auction_Data__c/fields/Actual_Record_YearMonth__c.field-meta.xml
<CustomField>
    <fullName>Actual_Record_YearMonth__c</fullName>
    <description>買取商談に紐づく、買取実績の「売上計上年月(営業実績)」から取得</description>
    <formula>Sales_Opportunity__r.SalesMonthSummary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>買取商談に紐づく、買取実績の「売上計上年月(営業実績)」から取得</inlineHelpText>
    <label>実績計上年月</label>
    <type>Text</type>
</CustomField>