force-app/main/default/objects/Auction_Data__c/fields/again__c.field-meta.xml
<CustomField>
    <fullName>again__c</fullName>
    <formula>IF(
    number_of_auction__c &gt;= 2,
    &quot;再&quot;,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>再出品チェック</label>
    <type>Text</type>
</CustomField>