force-app/main/default/objects/Auction_Data__c/fields/all_completion_date__c.field-meta.xml
<CustomField>
    <fullName>all_completion_date__c</fullName>
    <label>全完了日</label>
    <type>DateTime</type>
</CustomField>