force-app/main/default/objects/Auction_Data__c/fields/auc_area__c.field-meta.xml
<CustomField>
    <fullName>auc_area__c</fullName>
    <label>現在のコーナー/ステータス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>