force-app/main/default/objects/Auction_Data__c/fields/auc_kbn__c.field-meta.xml
<CustomField>
    <fullName>auc_kbn__c</fullName>
    <label>オークション区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>