force-app/main/default/objects/Auction_Data__c/fields/auction_mvr__c.field-meta.xml
<CustomField>
    <fullName>auction_mvr__c</fullName>
    <label>オークション課指示（リサイクル）</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>永抹出来るか不明、最終預かり</fullName>
            </value>
            <value>
                <fullName>％オク　提示金額で確認</fullName>
            </value>
            <value>
                <fullName>％オク　提示金額不可なら最終預かり</fullName>
            </value>
            <value>
                <fullName>購入希望しないだが、最終預かり</fullName>
            </value>
            <value>
                <fullName>提示金額不可なら最終預かり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>