force-app/main/default/objects/Auction_Data__c/fields/Auction_URL__c.field-meta.xml
<CustomField>
    <fullName>Auction_URL__c</fullName>
    <label>オークションURL</label>
    <type>Url</type>
</CustomField>