force-app/main/default/objects/Auction_Data__c/fields/Automobile_Liability_Insurance_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Automobile_Liability_Insurance_Arrival__c</fullName>
    <description>流通</description>
    <label>自賠到着日</label>
    <type>Date</type>
</CustomField>