force-app/main/default/objects/Auction_Data__c/fields/B_cars__c.field-meta.xml
<CustomField>
    <fullName>B_cars__c</fullName>
    <label>B車両フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>