force-app/main/default/objects/Auction_Data__c/fields/B_lank_proxy_pic__c.field-meta.xml
<CustomField>
    <fullName>B_lank_proxy_pic__c</fullName>
    <label>B車両代理対応</label>
    <length>255</length>
    <type>Text</type>
</CustomField>