force-app/main/default/objects/Auction_Data__c/fields/bankin_text__c.field-meta.xml
<CustomField>
    <fullName>bankin_text__c</fullName>
    <label>区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>