force-app/main/default/objects/Auction_Data__c/fields/bit_opportunity_loss__c.field-meta.xml
<CustomField>
    <fullName>bit_opportunity_loss__c</fullName>
    <formula>first_bit_price__c -  first_auto_bit_price__c</formula>
    <label>自動入札と終了価格の差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>