force-app/main/default/objects/Auction_Data__c/fields/bit_price_mvr__c.field-meta.xml
<CustomField>
    <fullName>bit_price_mvr__c</fullName>
    <inlineHelpText>提携業者の入札金額</inlineHelpText>
    <label>提携業者入札金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>