force-app/main/default/objects/Auction_Data__c/fields/BL__c.field-meta.xml
<CustomField>
    <fullName>BL__c</fullName>
    <label>B/L発行日</label>
    <type>Date</type>
</CustomField>