force-app/main/default/objects/Auction_Data__c/fields/cancel_date__c.field-meta.xml
<CustomField>
    <fullName>cancel_date__c</fullName>
    <description>sa_auc_infoのcancel_dateから連携</description>
    <label>キャンセル日</label>
    <type>Date</type>
</CustomField>