force-app/main/default/objects/Auction_Data__c/fields/cancel_memo__c.field-meta.xml
<CustomField>
    <fullName>cancel_memo__c</fullName>
    <label>キャンセルメモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>