force-app/main/default/objects/Auction_Data__c/fields/cancel_operation_department__c.field-meta.xml
<CustomField>
    <fullName>cancel_operation_department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>業務課キャンセルフラグ</label>
    <type>Checkbox</type>
</CustomField>