force-app/main/default/objects/Auction_Data__c/fields/car_info_id__c.field-meta.xml
<CustomField>
    <fullName>car_info_id__c</fullName>
    <externalId>true</externalId>
    <label>car_info_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>