force-app/main/default/objects/Auction_Data__c/fields/cartypes__c.field-meta.xml
<CustomField>
    <fullName>cartypes__c</fullName>
    <label>車種コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>