force-app/main/default/objects/Auction_Data__c/fields/Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number__c</fullName>
    <description>共通</description>
    <label>車台番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>