force-app/main/default/objects/Auction_Data__c/fields/Chassis_Number_Last_5__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number_Last_5__c</fullName>
    <formula>RIGHT(Chassis_Number__c, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車台番号　下5桁</label>
    <type>Text</type>
</CustomField>