force-app/main/default/objects/Auction_Data__c/fields/check_sales__c.field-meta.xml
<CustomField>
    <fullName>check_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>販売対応</label>
    <type>Checkbox</type>
</CustomField>