force-app/main/default/objects/Auction_Data__c/fields/close_date__c.field-meta.xml
<CustomField>
    <fullName>close_date__c</fullName>
    <formula>DATEVALUE(Deadline_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>オークション終了日時から数式で取得</inlineHelpText>
    <label>オークション終了日</label>
    <type>Date</type>
</CustomField>