force-app/main/default/objects/Auction_Data__c/fields/Company_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Company_Selling_Price__c</fullName>
    <description>流通
ワンプラ項目</description>
    <label>当社販売価格</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>