force-app/main/default/objects/Auction_Data__c/fields/competitor_aa_inspection_sheet_creation__c.field-meta.xml
<CustomField>
    <fullName>competitor_aa_inspection_sheet_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出品票作成（他社AA）</label>
    <type>Checkbox</type>
</CustomField>