force-app/main/default/objects/Auction_Data__c/fields/competitor_aa_target_price__c.field-meta.xml
<CustomField>
    <fullName>competitor_aa_target_price__c</fullName>
    <label>希望金額（他社AA）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>