force-app/main/default/objects/Auction_Data__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>リユースのみ</description>
    <label>完了日</label>
    <type>Date</type>
</CustomField>