force-app/main/default/objects/Auction_Data__c/fields/count_CR_record__c.field-meta.xml
<CustomField>
    <fullName>count_CR_record__c</fullName>
    <description>CR案件で、管理番号-〇〇の数値をカウントするために使用</description>
    <label>CR案件のカウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>