force-app/main/default/objects/Auction_Data__c/fields/cs_flg__c.field-meta.xml
<CustomField>
    <fullName>cs_flg__c</fullName>
    <label>先売りフラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>