force-app/main/default/objects/Auction_Data__c/fields/dairi_achievements__c.field-meta.xml
<CustomField>
    <fullName>dairi_achievements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談売却ノルマ管理</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>そのユーザーはオークション課ロールに含まれていません。
追加する場合は営業戦略課へご連絡ください。</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>オークション課</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>オークション課マネージャ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>proxy_achievements</relationshipName>
    <type>Lookup</type>
</CustomField>