force-app/main/default/objects/Auction_Data__c/fields/Dairi_coming__c.field-meta.xml
<CustomField>
    <fullName>Dairi_coming__c</fullName>
    <description>Dairi_coming</description>
    <label>代理出品フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>