force-app/main/default/objects/Auction_Data__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <description>共通
流通：ダメージ
リユース：車輌区分</description>
    <label>ダメージ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>