force-app/main/default/objects/Auction_Data__c/fields/data_collected_date__c.field-meta.xml
<CustomField>
    <fullName>data_collected_date__c</fullName>
    <label>データ取得日</label>
    <type>Date</type>
</CustomField>