force-app/main/default/objects/Auction_Data__c/fields/data_getter__c.field-meta.xml
<CustomField>
    <fullName>data_getter__c</fullName>
    <label>データ取得者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>