force-app/main/default/objects/Auction_Data__c/fields/Deadline_Time__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Time__c</fullName>
    <description>当初設定した締切時間
共通
流通：締切時間
リユース：締め切り時間</description>
    <label>オークション終了日時</label>
    <type>DateTime</type>
</CustomField>