force-app/main/default/objects/Auction_Data__c/fields/departure_code__c.field-meta.xml
<CustomField>
    <fullName>departure_code__c</fullName>
    <label>発地コード（工程分割1）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>