force-app/main/default/objects/Auction_Data__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>共通</description>
    <label>出航予定日</label>
    <type>Date</type>
</CustomField>