force-app/main/default/objects/Auction_Data__c/fields/departure_port_name__c.field-meta.xml
<CustomField>
    <fullName>departure_port_name__c</fullName>
    <label>出発港</label>
    <length>255</length>
    <type>Text</type>
</CustomField>