force-app/main/default/objects/Auction_Data__c/fields/Designated_Dismantler__c.field-meta.xml
<CustomField>
    <fullName>Designated_Dismantler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>登録解体業者 会員情報</label>
    <referenceTo>Dismantler_member_info__c</referenceTo>
    <relationshipLabel>オークション出品データ</relationshipLabel>
    <relationshipName>Designated_Dismantler</relationshipName>
    <type>Lookup</type>
</CustomField>