force-app/main/default/objects/Auction_Data__c/fields/destination_code__c.field-meta.xml
<CustomField>
    <fullName>destination_code__c</fullName>
    <label>着地コード（最終の工程分割）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>