force-app/main/default/objects/Auction_Data__c/fields/destination_port_name__c.field-meta.xml
<CustomField>
    <fullName>destination_port_name__c</fullName>
    <label>到着予定港</label>
    <length>255</length>
    <type>Text</type>
</CustomField>