force-app/main/default/objects/Auction_Data__c/fields/diff_1_2__c.field-meta.xml
<CustomField>
    <fullName>diff_1_2__c</fullName>
    <formula>first_bit_price__c  - second_bit_price__c</formula>
    <label>1番手と2番手の差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>