force-app/main/default/objects/Auction_Data__c/fields/diff_2_3__c.field-meta.xml
<CustomField>
    <fullName>diff_2_3__c</fullName>
    <formula>second_bit_price__c  -  third_bit_price__c</formula>
    <label>2番手と3番手の差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>