force-app/main/default/objects/Auction_Data__c/fields/Difference_Lower_Selling__c.field-meta.xml
<CustomField>
    <fullName>Difference_Lower_Selling__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Selling_Price__c)), 
  (Selling_Price__c + Expenses__c) - Lower_Selling_Price__c, 
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差額（売り下）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>