force-app/main/default/objects/Auction_Data__c/fields/Difference_Upper_Selling__c.field-meta.xml
<CustomField>
    <fullName>Difference_Upper_Selling__c</fullName>
    <formula>IF(
    OR(ISBLANK(Price_and_Expenses__c), Price_and_Expenses__c = 0),
    0,  
    Price_and_Expenses__c - Upper_Selling_Price__c  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差額（売り上）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>