force-app/main/default/objects/Auction_Data__c/fields/Dismantling_Equipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Dismantling_Equipment_Status__c</fullName>
    <description>流通</description>
    <label>解体装備状況</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>フロンあり</fullName>
            </value>
            <value>
                <fullName>エアバッグあり</fullName>
            </value>
            <value>
                <fullName>全てなし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>