force-app/main/default/objects/Auction_Data__c/fields/Dismantling_Record_Date__c.field-meta.xml
<CustomField>
    <fullName>Dismantling_Record_Date__c</fullName>
    <description>流通</description>
    <label>解体記録日</label>
    <type>Date</type>
</CustomField>