force-app/main/default/objects/Auction_Data__c/fields/Displacement__c.field-meta.xml
<CustomField>
    <fullName>Displacement__c</fullName>
    <description>共通
流通：排気量
リユース：排気量</description>
    <label>排気量</label>
    <length>255</length>
    <type>Text</type>
</CustomField>