force-app/main/default/objects/Auction_Data__c/fields/document_management_request_list_chat_co__c.field-meta.xml
<CustomField>
    <fullName>document_management_request_list_chat_co__c</fullName>
    <defaultValue>false</defaultValue>
    <label>書類管理依頼・リストチャット完了</label>
    <type>Checkbox</type>
</CustomField>