force-app/main/default/objects/Auction_Data__c/fields/document_order_yard_request__c.field-meta.xml
<CustomField>
    <fullName>document_order_yard_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>書類管理依頼・オーダー入力・ヤード依頼</label>
    <type>Checkbox</type>
</CustomField>