force-app/main/default/objects/Auction_Data__c/fields/Document_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Send_Date__c</fullName>
    <description>共通</description>
    <label>書類発送日</label>
    <type>Date</type>
</CustomField>