force-app/main/default/objects/Auction_Data__c/fields/document_status__c.field-meta.xml
<CustomField>
    <fullName>document_status__c</fullName>
    <label>処理区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>