force-app/main/default/objects/Auction_Data__c/fields/drivetype__c.field-meta.xml
<CustomField>
    <fullName>drivetype__c</fullName>
    <label>駆動</label>
    <length>255</length>
    <type>Text</type>
</CustomField>