force-app/main/default/objects/Auction_Data__c/fields/dwh_record_type__c.field-meta.xml
<CustomField>
    <fullName>dwh_record_type__c</fullName>
    <label>dwh_record_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>