force-app/main/default/objects/Auction_Data__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <description>共通
流通：エンジン型式
リユース：エンジン型式</description>
    <label>エンジン型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>