force-app/main/default/objects/Auction_Data__c/fields/Estimated_gross_profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_gross_profit__c</fullName>
    <label>想定粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>