force-app/main/default/objects/Auction_Data__c/fields/ETD_year_month__c.field-meta.xml
<CustomField>
    <fullName>ETD_year_month__c</fullName>
    <formula>IF(
  ISBLANK(ETD__c),
  NULL,
  TEXT(YEAR(ETD__c)) &amp; &quot;/&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(ETD__c)), 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETD（年月）</label>
    <type>Text</type>
</CustomField>