force-app/main/default/objects/Auction_Data__c/fields/Expected_Arrival_Dat__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Dat__c</fullName>
    <description>共通</description>
    <label>目的地到着予定日</label>
    <type>Date</type>
</CustomField>