force-app/main/default/objects/Auction_Data__c/fields/Expected_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales_Price__c</fullName>
    <description>流通</description>
    <label>販売予想価格</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>