force-app/main/default/objects/Auction_Data__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <description>共通</description>
    <label>諸経費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>