force-app/main/default/objects/Auction_Data__c/fields/Export_Price__c.field-meta.xml
<CustomField>
    <fullName>Export_Price__c</fullName>
    <description>共通</description>
    <label>貿易価格</label>
    <length>255</length>
    <type>Text</type>
</CustomField>