force-app/main/default/objects/Auction_Data__c/fields/Export_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Export_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>輸出車両管理</label>
    <referenceTo>Export_Vehicle__c</referenceTo>
    <relationshipLabel>オークション出品データ</relationshipLabel>
    <relationshipName>Export_Vehicle_for_auction_data</relationshipName>
    <type>Lookup</type>
</CustomField>