force-app/main/default/objects/Auction_Data__c/fields/first_auto_bit_price__c.field-meta.xml
<CustomField>
    <fullName>first_auto_bit_price__c</fullName>
    <label>1番手入札金額（ライブ自動入札価格）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>