force-app/main/default/objects/Auction_Data__c/fields/first_bit_member_name__c.field-meta.xml
<CustomField>
    <fullName>first_bit_member_name__c</fullName>
    <description>DetaSpiderからは会員IDを連携。
フローで会員名を出している。</description>
    <inlineHelpText>売却後に連携</inlineHelpText>
    <label>1番手会員名（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>