force-app/main/default/objects/Auction_Data__c/fields/first_bit_memberid__c.field-meta.xml
<CustomField>
    <fullName>first_bit_memberid__c</fullName>
    <label>1番手会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>