force-app/main/default/objects/Auction_Data__c/fields/first_bit_price__c.field-meta.xml
<CustomField>
    <fullName>first_bit_price__c</fullName>
    <description>sa_bid_infoには自動入札の価格しか保持していない。
実際の1番手の金額を持って来るには、sa_auc_infoのcurrent_priceを持ってくる必要がある。

winner_flgがついているものは売却している、していないに関わらずトップの会員にはTrueとなるので、このフラグが付いている会員にかんしては、sa_auc_infoのcurrent_priceを持ってくる。

ただ、今後この項目も欲しいと言われる可能性があるので、今のものは（自動入札）を付けて置いておいて、新しく1番手入札金額の項目を作成する</description>
    <label>1番手入札金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>