force-app/main/default/objects/Auction_Data__c/fields/first_departure_name__c.field-meta.xml
<CustomField>
    <fullName>first_departure_name__c</fullName>
    <inlineHelpText>工程分割がある場合は、一番はじめの出発地を取得</inlineHelpText>
    <label>発地名（工程分割1）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>