force-app/main/default/objects/Auction_Data__c/fields/firstsyuppin_date__c.field-meta.xml
<CustomField>
    <fullName>firstsyuppin_date__c</fullName>
    <description>car_infoより連携</description>
    <label>初出品日</label>
    <type>Date</type>
</CustomField>