force-app/main/default/objects/Auction_Data__c/fields/for_Study__c.field-meta.xml
<CustomField>
    <fullName>for_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>勉強用</label>
    <type>Checkbox</type>
</CustomField>