force-app/main/default/objects/Auction_Data__c/fields/fuel__c.field-meta.xml
<CustomField>
    <fullName>fuel__c</fullName>
    <label>燃料</label>
    <length>255</length>
    <type>Text</type>
</CustomField>