force-app/main/default/objects/Auction_Data__c/fields/grade__c.field-meta.xml
<CustomField>
    <fullName>grade__c</fullName>
    <label>グレード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>