force-app/main/default/objects/Auction_Data__c/fields/gross_profit__c.field-meta.xml
<CustomField>
    <fullName>gross_profit__c</fullName>
    <description>買取商談に紐づく買取実績の利益から取得</description>
    <formula>Sales_Opportunity__r.PurchaseExperience__r.Profits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>買取商談に紐づく買取実績の利益から取得</inlineHelpText>
    <label>粗利（買取実績）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>