force-app/main/default/objects/Auction_Data__c/fields/hanamaru_gross_profit__c.field-meta.xml
<CustomField>
    <fullName>hanamaru_gross_profit__c</fullName>
    <description>使用用途は山田さんに確認</description>
    <label>はなまる台帳粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>