force-app/main/default/objects/Auction_Data__c/fields/hanamaru_or_sococaratrading__c.field-meta.xml
<CustomField>
    <fullName>hanamaru_or_sococaratrading__c</fullName>
    <formula>IF(
  ISBLANK(Winning_Member__r.country_cd__r.Name),
  NULL,
  IF(
    Winning_Member__r.country_cd__r.Name = &quot;日本&quot;,
    &quot;はなまる扱い&quot;,
    &quot;ソコトレ扱い&quot;
  )
)</formula>
    <label>扱い条件</label>
    <type>Text</type>
</CustomField>