force-app/main/default/objects/Auction_Data__c/fields/handle__c.field-meta.xml
<CustomField>
    <fullName>handle__c</fullName>
    <label>ハンドル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>