force-app/main/default/objects/Auction_Data__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>流通のみ</description>
    <label>高さ</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>