force-app/main/default/objects/Auction_Data__c/fields/High_Low_Assessment__c.field-meta.xml
<CustomField>
    <fullName>High_Low_Assessment__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Upper_Selling_Price__c),
    ISBLANK(Lower_Selling_Price__c)
  ),
  NULL,
  IF(
    Price_and_Expenses__c &gt; Upper_Selling_Price__c, &quot;Good&quot;,
    IF(Price_and_Expenses__c &lt; Lower_Selling_Price__c, &quot;Bad&quot;, &quot;並&quot;)
  )
)</formula>
    <label>高低判断</label>
    <type>Text</type>
</CustomField>