force-app/main/default/objects/Auction_Data__c/fields/High_Value_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Vehicle__c</fullName>
    <formula>Lower_Selling_Price__c &gt;= 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>高額車両</label>
    <type>Checkbox</type>
</CustomField>