force-app/main/default/objects/Auction_Data__c/fields/Hour_Deadline_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Hour_Deadline_Time_c__c</fullName>
    <description>その日の0:00から何分経ったか」を表す数値。オークション課用レポートに使用</description>
    <formula>HOUR(TIMEVALUE(Deadline_Time__c)) * 60
+ MINUTE(TIMEVALUE(Deadline_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>オークション終了日時（経過分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>