force-app/main/default/objects/Auction_Data__c/fields/how_long_date__c.field-meta.xml
<CustomField>
    <fullName>how_long_date__c</fullName>
    <formula>TODAY() - DATEVALUE(Deadline_Time__c)</formula>
    <inlineHelpText>フローで使用</inlineHelpText>
    <label>終了までの日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>