force-app/main/default/objects/Auction_Data__c/fields/Hybrid__c.field-meta.xml
<CustomField>
    <fullName>Hybrid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ハイブリッド</label>
    <type>Checkbox</type>
</CustomField>