force-app/main/default/objects/Auction_Data__c/fields/image_uplode_date__c.field-meta.xml
<CustomField>
    <fullName>image_uplode_date__c</fullName>
    <label>アップロード日（確認日）</label>
    <type>Date</type>
</CustomField>