force-app/main/default/objects/Auction_Data__c/fields/Immediate_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Purchase_Price__c</fullName>
    <description>リユース</description>
    <label>即決価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>