force-app/main/default/objects/Auction_Data__c/fields/Initial_Registration_Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Initial_Registration_Year_Month__c</fullName>
    <description>共通
流通：初度年/月
リユース：初年度登録年月</description>
    <label>初年度登録年/月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>