force-app/main/default/objects/Auction_Data__c/fields/inspection_sheet_status__c.field-meta.xml
<CustomField>
    <fullName>inspection_sheet_status__c</fullName>
    <label>出品票有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有搬入</fullName>
            </value>
            <value>
                <fullName>無搬入</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>