force-app/main/default/objects/Auction_Data__c/fields/invoice_status_group_by_lot__c.field-meta.xml
<CustomField>
    <fullName>invoice_status_group_by_lot__c</fullName>
    <inlineHelpText>ロットに対する請求書の処理状態が
・すべて入金済→入金済み
・1つでも未入金・一部入金・申請中・請求待ちがある場合→未入金あり
・すべて取消→取消
・取消と入金済みだけがある場合→入金済み
※はなまる→ソコトレの請求は除く</inlineHelpText>
    <label>請求処理状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>