force-app/main/default/objects/Auction_Data__c/fields/IsCurrentBusinessDay__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentBusinessDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>当日営業日</label>
    <type>Checkbox</type>
</CustomField>