force-app/main/default/objects/Auction_Data__c/fields/IsNextBusinessDay__c.field-meta.xml
<CustomField>
    <fullName>IsNextBusinessDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>翌営業日</label>
    <type>Checkbox</type>
</CustomField>