force-app/main/default/objects/Auction_Data__c/fields/IsPreviousBusinessDay__c.field-meta.xml
<CustomField>
    <fullName>IsPreviousBusinessDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>前営業日</label>
    <type>Checkbox</type>
</CustomField>