force-app/main/default/objects/Auction_Data__c/fields/IsSecondNextBusinessDay__c.field-meta.xml
<CustomField>
    <fullName>IsSecondNextBusinessDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>翌々営業日</label>
    <type>Checkbox</type>
</CustomField>