force-app/main/default/objects/Auction_Data__c/fields/issue_date__c.field-meta.xml
<CustomField>
    <fullName>issue_date__c</fullName>
    <label>交付年月日（発行日）</label>
    <type>Date</type>
</CustomField>