force-app/main/default/objects/Auction_Data__c/fields/kanade_bit_2nd__c.field-meta.xml
<CustomField>
    <fullName>kanade_bit_2nd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>カナデ（西）</label>
    <type>Checkbox</type>
</CustomField>