force-app/main/default/objects/Auction_Data__c/fields/kanade_bit__c.field-meta.xml
<CustomField>
    <fullName>kanade_bit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>カナデ（村竹）</label>
    <type>Checkbox</type>
</CustomField>