force-app/main/default/objects/Auction_Data__c/fields/kanri_num_text__c.field-meta.xml
<CustomField>
    <fullName>kanri_num_text__c</fullName>
    <description>オークション課がコピペをしにくいとのことだったので、テキスト表示できるように対応。</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>管理番号（テキスト）</label>
    <type>Text</type>
</CustomField>