force-app/main/default/objects/Auction_Data__c/fields/Land_Transport_Bureau_Date__c.field-meta.xml
<CustomField>
    <fullName>Land_Transport_Bureau_Date__c</fullName>
    <description>流通</description>
    <label>陸運日</label>
    <type>Date</type>
</CustomField>