force-app/main/default/objects/Auction_Data__c/fields/last_destination_name__c.field-meta.xml
<CustomField>
    <fullName>last_destination_name__c</fullName>
    <inlineHelpText>工程分割がある場合、一番最後の着地名を表示</inlineHelpText>
    <label>着地名（最終の工程分割）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>