force-app/main/default/objects/Auction_Data__c/fields/lc_number__c.field-meta.xml
<CustomField>
    <fullName>lc_number__c</fullName>
    <formula>Export_Vehicle__r.lc_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LC番号</label>
    <type>Text</type>
</CustomField>