force-app/main/default/objects/Auction_Data__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>長さ</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>