force-app/main/default/objects/Auction_Data__c/fields/Listing_Memo__c.field-meta.xml
<CustomField>
    <fullName>Listing_Memo__c</fullName>
    <description>共通
流通：出品メモ
リユース：出品メモ</description>
    <label>出品メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>