force-app/main/default/objects/Auction_Data__c/fields/loading_charge__c.field-meta.xml
<CustomField>
    <fullName>loading_charge__c</fullName>
    <label>Loading Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>