force-app/main/default/objects/Auction_Data__c/fields/loading_method__c.field-meta.xml
<CustomField>
    <fullName>loading_method__c</fullName>
    <label>積込方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>