force-app/main/default/objects/Auction_Data__c/fields/loading_shape__c.field-meta.xml
<CustomField>
    <fullName>loading_shape__c</fullName>
    <label>積載形態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>