force-app/main/default/objects/Auction_Data__c/fields/lot_num_old__c.field-meta.xml
<CustomField>
    <fullName>lot_num_old__c</fullName>
    <label>旧ロット番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>