force-app/main/default/objects/Auction_Data__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <description>共通
流通：管理No
リユース：管理番号</description>
    <label>ロット番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>