force-app/main/default/objects/Auction_Data__c/fields/max_process_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>max_process_delivery_date__c</fullName>
    <inlineHelpText>工程番号が最大の値の配達日。</inlineHelpText>
    <label>工程配達日（最大）</label>
    <type>Date</type>
</CustomField>