force-app/main/default/objects/Auction_Data__c/fields/max_process_departure_name__c.field-meta.xml
<CustomField>
    <fullName>max_process_departure_name__c</fullName>
    <inlineHelpText>工程番号が最大のものの発地名</inlineHelpText>
    <label>工程発地名（最大）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>