force-app/main/default/objects/Auction_Data__c/fields/max_process_destination_name__c.field-meta.xml
<CustomField>
    <fullName>max_process_destination_name__c</fullName>
    <inlineHelpText>工程番号が最大の値の着地名を表示</inlineHelpText>
    <label>工程着地名（最大）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>